welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:19: error: class Array takes type parameters
  var res:Array = lireColonne(longueurTableau)
          ^Array1:19: error: class Array takes type parameters
  var res:Array = lireColonne(longueurTableau)
          ^